--- a/index.html
+++ b/index.html
@@ -36,23 +36,23 @@
                                 All category
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item select-item py-2" href="#section-sale">Automobiles</a></li>
+                                <li><a class="dropdown-item select-item py-2" href="./product-listing.html">Automobiles</a></li>
                                 <li><a class="dropdown-item select-item py-2" href="#title-recommend">Clothes and
                                         wear</a></li>
                                 <li><a class="dropdown-item select-item py-2" href="#section-appliances">Home
                                         interiors</a></li>
-                                <li><a class="dropdown-item select-item py-2" href="#section-sale">Computer and tech</a>
+                                <li><a class="dropdown-item select-item py-2" href="./product-listing.html">Computer and tech</a>
                                 </li>
                                 <li><a class="dropdown-item select-item py-2" href="#section-gadgets">Tools,
                                         equipments</a></li>
                                 <li><a class="dropdown-item select-item py-2" href="#">Sports and outdoor</a></li>
                                 <li><a class="dropdown-item select-item py-2" href="#">Animal and pets</a></li>
-                                <li><a class="dropdown-item select-item py-2" href="#section-sale">Machinery tools</a>
+                                <li><a class="dropdown-item select-item py-2" href="./product-listing.html">Machinery tools</a>
                                 </li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#">More category</a></li>
+                                <li><a class="dropdown-item" href="./product-listing.html">More category</a></li>
                             </ul>
                         </button>
                         <button class="btn" type="submit">Search</button>
@@ -86,7 +86,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent-1">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">All category</a>
+                            <a class="nav-link active" aria-current="page" href="./product-listing.html">All category</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#section-sale">Hot offers</a>
@@ -170,15 +170,15 @@
     <main>
         <div class="hero-1 container p-3">
             <div class="hero-component-1">
-                <a class="select-item py-2" href="#section-sale">Automobiles</a>
+                <a class="select-item py-2" href="./product-listing.html">Automobiles</a>
                 <a class="select-item py-2" href="#title-recommend">Clothes and wear</a>
                 <a class="select-item py-2" href="#section-appliances">Home interiors</a>
-                <a class="select-item py-2" href="#section-sale">Computer and tech</a>
+                <a class="select-item py-2" href="./product-listing.html">Computer and tech</a>
                 <a class="select-item py-2" href="#section-gadgets">Tools, equipments</a>
                 <a class="select-item py-2" href="#">Sports and outdoor</a>
                 <a class="select-item py-2" href="#">Animal and pets</a>
                 <a class="select-item py-2" href="#section-sale">Machinery tools</a>
-                <a class="select-item py-2" href="#">More category</a>
+                <a class="select-item py-2" href="./product-listing.html">More category</a>
             </div>
             <div class="hero-component-2">
                 <h2>Latest trending <br><b>Electronic items</b></h2>
@@ -619,7 +619,7 @@
                 </div>
             </div>
         </div>
-        <div class="footer-detail ms-3">
+        <div class="footer-detail">
             <p>© 2025 Ecommerce by Waleed Ahmad. </p>
             <div class="language"><img src="./assets/Layout1/Image/flags/US@2x.png" alt="">
                 <span>English</span>
