--- a/Product-shirt.html
+++ b/Product-shirt.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg" id="main-nav">
             <div class="container">
                 <div class="logo-button">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -35,43 +35,39 @@
                                 All category
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item select-item py-2" href="#section-sale">Automobiles</a></li>
+                                <li><a class="dropdown-item select-item py-2" href="./product-listing.html">Automobiles</a></li>
                                 <li><a class="dropdown-item select-item py-2" href="#title-recommend">Clothes and
                                         wear</a></li>
                                 <li><a class="dropdown-item select-item py-2" href="#section-appliances">Home
                                         interiors</a></li>
-                                <li><a class="dropdown-item select-item py-2" href="#section-sale">Computer and tech</a>
+                                <li><a class="dropdown-item select-item py-2" href="./product-listing.html">Computer and tech</a>
                                 </li>
                                 <li><a class="dropdown-item select-item py-2" href="#section-gadgets">Tools,
                                         equipments</a></li>
                                 <li><a class="dropdown-item select-item py-2" href="#">Sports and outdoor</a></li>
                                 <li><a class="dropdown-item select-item py-2" href="#">Animal and pets</a></li>
-                                <li><a class="dropdown-item select-item py-2" href="#section-sale">Machinery tools</a>
+                                <li><a class="dropdown-item select-item py-2" href="./product-listing.html">Machinery tools</a>
                                 </li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#">More category</a></li>
+                                <li><a class="dropdown-item" href="./product-listing.html">More category</a></li>
                             </ul>
                         </button>
                         <button class="btn" type="submit">Search</button>
                     </form>
                     <ul class="navbar-nav mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#"><img
-                                    src="./assets/Layout/alibaba/Image/icons/Profile.png" alt=""></a>
+                            <a class="nav-link active" aria-current="page" href="#"><i class="fa-regular fa-user"></i><p>Profile</p></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><img src="./assets/Layout/alibaba/Image/icons/Message.png"
-                                    alt=""></a>
+                            <a class="nav-link" href="#"><i class="fa-solid fa-message"></i><p>Message</p></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><img src="./assets/Layout/alibaba/Image/icons/Orders.png"
-                                    alt=""></a>
+                            <a class="nav-link" href="#"><i class="fa-solid fa-heart"></i><p>Orders</p></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><img src="./assets/Layout/alibaba/Image/icons/Cart.png"
-                                    alt=""></a>
+                            <a class="nav-link" href="#"><i class="fa-solid fa-basket-shopping"></i><p>Add to cart</p></a>
                         </li>
                     </ul>
                 </div>
