--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary" id="main-nav">
+        <nav class="navbar navbar-expand-lg" id="main-nav">
             <div class="container">
                 <div class="logo-button">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -74,7 +74,7 @@
                 </div>
             </div>
         </nav>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary" id="seconary-nav">
+        <nav class="navbar navbar-expand-lg" id="seconary-nav">
             <div class="container">
                 <form class="d-flex" role="search" id="mobile-nav">
                     <input class="form-control" type="search" placeholder="Search" aria-label="Search" />
@@ -117,7 +117,7 @@
                     </ul>
                     <div class="d-flex list-unstyled px-3" id="user-accordance">
                         <li>
-                            <select name="currency" id="currency" class="form-select bg-body-tertiary border-0 "
+                            <select name="currency" id="currency" class="form-select border-0 "
                                 aria-label="Default select example">
                                 <option value="AED"> &nbsp; Arabic, AED </option>
                                 <option value="CNY"> &nbsp; Chinese, CNY</option>
@@ -132,7 +132,7 @@
                             </select>
                         </li>
                         <li class="nav-item dropdown px-3">
-                            <select name="country" id="country" class="form-select bg-body-tertiary border-0">
+                            <select name="country" id="country" class="form-select border-0">
                                 <option value="China"> &nbsp; Ship to China <img
                                         src="./assets/Layout1/Image/flags/CN@2x.png" alt="">
                                 </option>
