--- a/product-listing.html
+++ b/product-listing.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg" id="main-nav">
             <div class="container">
                 <div class="logo-button">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -23,8 +23,7 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <a class="navbar-brand" href="./index.html"><img src="./assets/Layout/Brand/logo-colored.png"
-                            alt=""></a>
+                    <a class="navbar-brand" href="./index.html"><img src="./assets/Layout/Brand/logo-colored.png" alt=""></a>
                 </div>
                 <div class="icons">
                     <img src="./assets/Mobile/Icon/Vector.png" alt="">
@@ -39,49 +38,45 @@
                                 All category
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item select-item py-2" href="#section-sale">Automobiles</a></li>
+                                <li><a class="dropdown-item select-item py-2" href="./product-listing.html">Automobiles</a></li>
                                 <li><a class="dropdown-item select-item py-2" href="#title-recommend">Clothes and
                                         wear</a></li>
                                 <li><a class="dropdown-item select-item py-2" href="#section-appliances">Home
                                         interiors</a></li>
-                                <li><a class="dropdown-item select-item py-2" href="#section-sale">Computer and tech</a>
+                                <li><a class="dropdown-item select-item py-2" href="./product-listing.html">Computer and tech</a>
                                 </li>
                                 <li><a class="dropdown-item select-item py-2" href="#section-gadgets">Tools,
                                         equipments</a></li>
                                 <li><a class="dropdown-item select-item py-2" href="#">Sports and outdoor</a></li>
                                 <li><a class="dropdown-item select-item py-2" href="#">Animal and pets</a></li>
-                                <li><a class="dropdown-item select-item py-2" href="#section-sale">Machinery tools</a>
+                                <li><a class="dropdown-item select-item py-2" href="./product-listing.html">Machinery tools</a>
                                 </li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#">More category</a></li>
+                                <li><a class="dropdown-item" href="./product-listing.html">More category</a></li>
                             </ul>
                         </button>
                         <button class="btn" type="submit">Search</button>
                     </form>
                     <ul class="navbar-nav mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#"><img
-                                    src="./assets/Layout/alibaba/Image/icons/Profile.png" alt=""></a>
+                            <a class="nav-link active" aria-current="page" href="#"><i class="fa-regular fa-user"></i><p>Profile</p></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><img src="./assets/Layout/alibaba/Image/icons/Message.png"
-                                    alt=""></a>
+                            <a class="nav-link" href="#"><i class="fa-solid fa-message"></i><p>Message</p></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><img src="./assets/Layout/alibaba/Image/icons/Orders.png"
-                                    alt=""></a>
+                            <a class="nav-link" href="#"><i class="fa-solid fa-heart"></i><p>Orders</p></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><img src="./assets/Layout/alibaba/Image/icons/Cart.png"
-                                    alt=""></a>
+                            <a class="nav-link" href="#"><i class="fa-solid fa-basket-shopping"></i><p>Add to cart</p></a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary" id="seconary-nav">
+        <nav class="navbar navbar-expand-lg" id="seconary-nav">
             <div class="container">
                 <form class="d-flex" role="search" id="mobile-nav">
                     <input class="form-control" type="search" placeholder="Search" aria-label="Search" />
@@ -93,7 +88,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent-1">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">All category</a>
+                            <a class="nav-link active" aria-current="page" href="./product-listing.html">All category</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#section-sale">Hot offers</a>
@@ -124,7 +119,7 @@
                     </ul>
                     <div class="d-flex list-unstyled px-3" id="user-accordance">
                         <li>
-                            <select name="currency" id="currency" class="form-select bg-body-tertiary border-0 "
+                            <select name="currency" id="currency" class="form-select border-0 "
                                 aria-label="Default select example">
                                 <option value="AED"> &nbsp; Arabic, AED </option>
                                 <option value="CNY"> &nbsp; Chinese, CNY</option>
@@ -139,7 +134,7 @@
                             </select>
                         </li>
                         <li class="nav-item dropdown px-3">
-                            <select name="country" id="country" class="form-select bg-body-tertiary border-0">
+                            <select name="country" id="country" class="form-select border-0">
                                 <option value="China"> &nbsp; Ship to China <img
                                         src="./assets/Layout1/Image/flags/CN@2x.png" alt="">
                                 </option>
@@ -173,10 +168,12 @@
                 </div>
             </div>
         </nav>
-        <div class="Breadcrumb container">
-            <p> Home </p>
-            <p> > </p>
-            <p> Tech </p>
+        <div class="top">
+            <div class="Breadcrumb container">
+                <span>Home</span>
+                <span>></span>
+                <span>Tech</span>
+        </div>
         </div>
     </header>
     <main class="container py-0">
