grid + Pagination listing on product lising

--- a/index.html
+++ b/index.html
@@ -167,6 +167,11 @@
             </div>
         </nav>
     </header>
+    <div class="letter">
+        <h5>Guide</h5>
+        <p>to open product-listing, please click <span>All category</span> in the nav</p>
+        <button class="letter-btn btn">Okay</button>
+    </div>
     <main>
         <div class="hero-1 container p-3">
             <div class="hero-component-1">
@@ -210,10 +215,10 @@
                 <h3>Deals and offers</h3>
                 <p>Hygiene equipments</p>
                 <div class="time">
-                    <div class="time-box"><b>04</b> Days</div>
-                    <div class="time-box"><b>13</b> Hour</div>
-                    <div class="time-box"><b>34</b> Min</div>
-                    <div class="time-box"><b>56</b> Sec</div>
+                    <div class="time-box"><b id="d-time">04</b> Days</div>
+                    <div class="time-box"><b id="h-time">13</b> Hour</div>
+                    <div class="time-box"><b id="m-time">34</b> Min</div>
+                    <div class="time-box"><b id="s-time">56</b> Sec</div>
                 </div>
             </div>
             <div class="cards">
