--- a/product-listing.html
+++ b/product-listing.html
@@ -23,7 +23,8 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <a class="navbar-brand" href="./index.html"><img src="./assets/Layout/Brand/logo-colored.png" alt=""></a>
+                    <a class="navbar-brand" href="./index.html"><img src="./assets/Layout/Brand/logo-colored.png"
+                            alt=""></a>
                 </div>
                 <div class="icons">
                     <img src="./assets/Mobile/Icon/Vector.png" alt="">
@@ -38,18 +39,21 @@
                                 All category
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item select-item py-2" href="./product-listing.html">Automobiles</a></li>
+                                <li><a class="dropdown-item select-item py-2"
+                                        href="./product-listing.html">Automobiles</a></li>
                                 <li><a class="dropdown-item select-item py-2" href="#title-recommend">Clothes and
                                         wear</a></li>
                                 <li><a class="dropdown-item select-item py-2" href="#section-appliances">Home
                                         interiors</a></li>
-                                <li><a class="dropdown-item select-item py-2" href="./product-listing.html">Computer and tech</a>
+                                <li><a class="dropdown-item select-item py-2" href="./product-listing.html">Computer and
+                                        tech</a>
                                 </li>
                                 <li><a class="dropdown-item select-item py-2" href="#section-gadgets">Tools,
                                         equipments</a></li>
                                 <li><a class="dropdown-item select-item py-2" href="#">Sports and outdoor</a></li>
                                 <li><a class="dropdown-item select-item py-2" href="#">Animal and pets</a></li>
-                                <li><a class="dropdown-item select-item py-2" href="./product-listing.html">Machinery tools</a>
+                                <li><a class="dropdown-item select-item py-2" href="./product-listing.html">Machinery
+                                        tools</a>
                                 </li>
                                 <li>
                                     <hr class="dropdown-divider">
@@ -61,16 +65,24 @@
                     </form>
                     <ul class="navbar-nav mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#"><i class="fa-regular fa-user"></i><p>Profile</p></a>
+                            <a class="nav-link active" aria-current="page" href="#"><i class="fa-regular fa-user"></i>
+                                <p>Profile</p>
+                            </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><i class="fa-solid fa-message"></i><p>Message</p></a>
+                            <a class="nav-link" href="#"><i class="fa-solid fa-message"></i>
+                                <p>Message</p>
+                            </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><i class="fa-solid fa-heart"></i><p>Orders</p></a>
+                            <a class="nav-link" href="#"><i class="fa-solid fa-heart"></i>
+                                <p>Orders</p>
+                            </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><i class="fa-solid fa-basket-shopping"></i><p>Add to cart</p></a>
+                            <a class="nav-link" href="#"><i class="fa-solid fa-basket-shopping"></i>
+                                <p>Add to cart</p>
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -88,7 +100,8 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent-1">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./product-listing.html">All category</a>
+                            <a class="nav-link active" aria-current="page" href="./product-listing.html">All
+                                category</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#section-sale">Hot offers</a>
@@ -173,7 +186,7 @@
                 <span>Home</span>
                 <span>></span>
                 <span>Tech</span>
-        </div>
+            </div>
         </div>
     </header>
     <main class="container py-0">
@@ -330,7 +343,7 @@
                     </div>
                 </div>
             </div>
-            <div class="Content-A">
+            <div class="Content-A" id="Content-A">
                 <div class="product-card">
                     <img src="./assets/Image/tech/image 33.png" alt="">
                     <div class="product-details">
@@ -427,9 +440,122 @@
                     </div>
                 </div>
             </div>
+            <div class="Content-G" id="Content-G">
+                <div class="filter-applied"></div>
+                <div class="grid-system">
+                    <div class="product-card">
+                        <div class="product-img"><img src="./assets/Image/tech/image 33.png" alt=""></div>
+                        <div class="product-details">
+                            <div class="favourite"><i class="fa-regular fa-heart"></i></div>
+                            <h5>Canon Cmera EOS 2000, Black 10x zoom</h5>
+                            <span><b>$998.00</b></span> <span><s>$1128.00</s></span>
+                            <p><span><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                        class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                        class="fa-regular fa-star"></i> 7.5</span>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <div class="product-img"><img src="./assets/Image/tech/image 23.png" alt=""></div>
+                        <div class="product-details">
+                            <div class="favourite"><i class="fa-regular fa-heart"></i></div>
+                            <h5>Canon Cmera EOS 2000, Black 10x zoom</h5>
+                            <span><b>$998.00</b></span> <span><s>$1128.00</s></span>
+                            <p><span><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                        class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                        class="fa-regular fa-star"></i> 7.5</span>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <div class="product-img"><img src="./assets/Image/tech/image 32.png" alt=""></div>
+                        <div class="product-details">
+                            <div class="favourite"><i class="fa-regular fa-heart"></i></div>
+                            <h5>Canon Cmera EOS 2000, Black 10x zoom</h5>
+                            <span><b>$998.00</b></span> <span><s>$1128.00</s></span>
+                            <p><span><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                        class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                        class="fa-regular fa-star"></i> 7.5</span>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <div class="product-img"><img src="./assets/Image/tech/image 34.png" alt=""></div>
+                        <div class="product-details">
+                            <div class="favourite"><i class="fa-regular fa-heart"></i></div>
+                            <h5>Canon Cmera EOS 2000, Black 10x zoom</h5>
+                            <span><b>$998.00</b></span> <span><s>$1128.00</s></span>
+                            <p><span><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                        class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                        class="fa-regular fa-star"></i> 7.5</span>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <div class="product-img"><img src="./assets/Image/tech/8.png" alt=""></div>
+                        <div class="product-details">
+                            <div class="favourite"><i class="fa-regular fa-heart"></i></div>
+                            <h5>Canon Cmera EOS 2000, Black 10x zoom</h5>
+                            <span><b>$998.00</b></span> <span><s>$1128.00</s></span>
+                            <p><span><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                        class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                        class="fa-regular fa-star"></i> 7.5</span>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <div class="product-img"><img src="./assets/Image/tech/6.png" alt=""></div>
+                        <div class="product-details">
+                            <div class="favourite"><i class="fa-regular fa-heart"></i></div>
+                            <h5>Canon Cmera EOS 2000, Black 10x zoom</h5>
+                            <span><b>$998.00</b></span> <span><s>$1128.00</s></span>
+                            <p><span><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                        class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                        class="fa-regular fa-star"></i> 7.5</span>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <div class="product-img"><img src="./assets/Image/tech/image 33.png" alt=""></div>
+                        <div class="product-details">
+                            <div class="favourite"><i class="fa-regular fa-heart"></i></div>
+                            <h5>Canon Cmera EOS 2000, Black 10x zoom</h5>
+                            <span><b>$998.00</b></span> <span><s>$1128.00</s></span>
+                            <p><span><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                        class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                        class="fa-regular fa-star"></i> 7.5</span>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <div class="product-img"><img src="./assets/Image/tech/image 23.png" alt=""></div>
+                        <div class="product-details">
+                            <div class="favourite"><i class="fa-regular fa-heart"></i></div>
+                            <h5>Canon Cmera EOS 2000, Black 10x zoom</h5>
+                            <span><b>$998.00</b></span> <span><s>$1128.00</s></span>
+                            <p><span><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                        class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                        class="fa-regular fa-star"></i> 7.5</span>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <div class="product-img"><img src="./assets/Image/tech/image 32.png" alt=""></div>
+                        <div class="product-details">
+                            <div class="favourite"><i class="fa-regular fa-heart"></i></div>
+                            <h5>Canon Cmera EOS 2000, Black 10x zoom</h5>
+                            <span><b>$998.00</b></span> <span><s>$1128.00</s></span>
+                            <p><span><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                        class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                        class="fa-regular fa-star"></i> 7.5</span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
-    <script src="./app.js"></script>
+    <script src="./product.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
